# CMakeProject

./: .gitignore  .gitmodules  README.md
Script/: Windows.cmd  Windows_vs17_Win32.cmd  Windows_vs17_x64.cmd  Windows_vs19_Win32.cmd  Windows_vs19_x64.cmd
Source/: CMakeLists.txt
